--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "auth0-js": "^9.10.0",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-camera-preview": "0.10.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
