** node_modules, plugins and www folders added back to gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,15 @@ npm-debug.log*
 .versions/
 coverage/
 node_modules/
+**/node_modules
 tmp/
 temp/
 platforms/
+plugins/
 plugins/android.json
 plugins/ios.json
 $RECYCLE.BIN/
-
+wwww/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
