--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "dotenv": "^7.0.0",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -59,7 +60,7 @@
     "@ionic/lab": "1.0.23",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
