--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/local-notifications": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.0",
+    "@ionic/angular": "^4.1.1",
     "@ionic/pro": "2.0.4",
     "@types/auth0-js": "^8.11.11",
     "auth0-js": "^9.10.0",
@@ -51,12 +51,12 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.3.1",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/cli": "7.3.6",
+    "@angular/compiler": "^7.2.9",
+    "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
     "@ionic/lab": "1.0.23",
@@ -74,7 +74,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
