--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/camera-preview": "^5.2.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.3.0",
     "@ionic-native/local-notifications": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -87,7 +88,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-camera-preview": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "ios",
