--- a/client/package.json
+++ b/client/package.json
@@ -75,7 +75,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
-    "typescript": "3.1.1"
+    "typescript": "^3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
